# ComfyUI-Apt_Preset

./: AutomaticCFG.py  README.md  README_ZH.md  __init__.py  def_unit.py  install.bat  main_unit.py  nodes.py  office_unit.py  pyproject.toml  requirements.txt  server_patch.py  stack.py
ComfyUI-Apt_Preset/: requirements.txt
Finenode/: CSV_loader.py
NodeBasic/: C_AD.py  C_GPT.py  C_basinInput.py  C_condition.py  C_flow.py  C_image.py  C_imgEffect.py  C_latent.py  C_layout.py  C_mask.py  C_math.py  C_model.py  C_packdata.py  C_promp.py  C_test.py  C_type.py  C_viewIO.py  c_packdata.py  highway.py  lay_img_canvas.py
NodeChx/: AdvancedCN.py  AnimateDiff.py  IPAdapterPlus.py  IPAdapterSD3.py  Keyframe_schedule.py  Ksampler_all.py  edit_imge.py  loraTool.py  main_nodes.py  main_stack.py  nodechx_unit.py  style_node.py  sum_text_yaml.py  video_node.py
NodeCollect/: mask_face.py  mask_mutil_lay.py  text_font2img.py
NodeExcel/: AIagent.py  ExcelOP.py
csv/: styles.csv  stylesCN.csv  stylesEN.csv
presets/: AD_万物跳舞.toml  CES.toml  CN_Flux.toml  Precautions注意事项.txt  ckpt-sd.toml  flux_uso.toml  i2v.toml  nanchaku_flux_dev.toml  new_presetSD.toml
py/: AdvancedCN.py  AnimateDiff.py  IPAdapterPlus.py  IPAdapterSD3.py  InpaintNodes.py  Keyframe_schedule.py  Ksampler_VisualStyle.py  Ksampler_dual_area.py  ScheduledNodes.py  layered_infinite_zoom.py  packdata.py  video_node.py
web/: color_choose.js  highway.js  layimg_canvas.js  load_preset.js  mul_input_count.js  node_style.js  node_width.js  ns_promptlist.js  photo-editor2.js  previewCombos.js  ratios.json  sdxl_styles.json  subgraph_encryption.js  sum_text_list.js  translationNode.js  type_list.js  view_Data_text.js  view_bridge_image.js  view_combo.js  was_history.json  web.js
(+334 files in other folders)
