[project]
name = "ComfyUI-Apt_Preset"
description = "ComfyUI Preset Manager, supporting various preset templates and workflow management"
version = "1.0.0"
license = { file = "LICENSE" }
authors = [
    {name = "cardenluo", email = "cardenluo@gmail.com"}
]

[project.urls]
Repository = "https://github.com/cardenluo/ComfyUI-Apt_Preset.git"

[tool.comfy.api]
key = "a2f5175b-83c8-4211-937a-baa16d88e668"

[tool.comfy]
PublisherId = "cardenluo"
DisplayName = "ComfyUI-Apt_Preset"
Icon = "comfy"
Tags = ["preset", "workflow", "template", "management"]
Nodes = [
    "nodes.py",
    "def_unit.py",
    "packdata.py",
    "stack.py"
]
