[project]
name = "ComfyUI-Apt_Preset"
description = "ComfyUI Preset Manager, supporting various preset templates and workflow management"
version = "6.3.2"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/cardenluo/ComfyUI-Apt_Preset.git"

[tool.comfy]
PublisherId = "cardenluo"
DisplayName = "ComfyUI-Apt_Preset"
Icon = ""

Tags = ["preset", "workflow", "ComfyUI", "management"]
Nodes = [
    "nodes.py",
    "def_unit.py",
    "packdata.py",
    "stack.py"
]


